Infopanel works on mobile correctly.

--- a/public/index.css
+++ b/public/index.css
@@ -123,8 +123,8 @@ header{
     text-decoration: none;
     margin: 35px 0 0 20px;
     text-align: center;
-    transition: all 250ms linear,visibility 0s,margin-top 0s,
-    color 500ms linear,background-color 0s;
+    transition: all 250ms linear,visibility 0s,padding-left 0s,padding-right 0s,
+    margin-top 0s,color 500ms linear,background-color 0s;
 }
 .headerlist a:hover{
     color: #ffdf00;
